kubernetes/routes.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: game-service
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: game-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  to:
    kind: Service
    name: game-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name:  hide-and-seek
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: frontend
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: leaderboard-service
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: leaderboard-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  to:
    kind: Service
    name: leaderboard-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: place-service
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: place-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  to:
    kind: Service
    name: place-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: player-service
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: player-service
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
spec:
  to:
    kind: Service
    name: player-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
---
